UI flow for adding and managing paper profiles on the home fragment
Action for adding paper profiles
Dialog for selecting a paper profile
Dialog for changing paper profile options
Lots of data model code to tie everything together

--- a/app/src/main/res/layout/fragment_paper_edit.xml
+++ b/app/src/main/res/layout/fragment_paper_edit.xml
@@ -332,7 +332,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:text="@string/label_grade_none"/>
+                        android:text="@string/label_grade_unfiltered"/>
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/edit_layout_isop_none"
                         android:layout_width="match_parent"
