--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -192,6 +192,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top|end"
+                            android:enabled="@{homeViewModel.hasPaperProfiles}"
                             app:icon="@drawable/ic_add_paper_profile" />
                     </FrameLayout>
                 </com.google.android.material.card.MaterialCardView>
